# HoofTopia

./: CMakeLists.txt  README.md  run.sh
database/: player.json
include/SDL2/: SDL_image.h
include/core/: frame.hpp  image.hpp
include/core/nodes/: character_body.hpp  static_body.hpp
include/core/screens/: main_screen.hpp
include/main/: main.hpp  player.hpp  projectile.hpp
include/main/objects/: block.hpp  projectile.hpp
src/: main.cpp  player.cpp  projectile.cpp
src/core/: frame.cpp
src/core/nodes/: character_body.cpp  static_body.cpp
src/core/screens/: main_screen.cpp
src/objects/: block.cpp
